@@ -12,18 +12,16 @@ AUX ghostscript-gpl-9.05-darwin.patch 1255 RMD160 c5137b5ff107eab43a18aab17be716
 DIST ghostscript-9.04.tar.bz2 29869900 RMD160 916bcacac247241fcf6ba02e90dc7e28040ba65e SHA1 df9c9e1924038da071d0ffbaddf42a75ecbc1e83 SHA256 f82c20b44ad3c204e2b78afbcd03a32dd523d26f5e18bf4508f3dfcbbfd30bc4
 DIST ghostscript-9.05.tar.bz2 28279634 RMD160 27935f60083b788b2793b19ee42f3663082ba084 SHA1 1a54a846e90ae95b5307f4f0459d044b9597d8cf SHA256 0f41212af3a5a552ab2302cd90606dc8245be34490a699726dc95ed3cd89ceac
 DIST ghostscript-gpl-9.04-patchset-3.tar.bz2 7760 RMD160 43a38afd1e8de506db70a58d0fa3168dba3c3a6e SHA1 03b27dad2e4cbec045f2264885bf366526e2db00 SHA256 b3c20adc111b8ddf3bc7d60a01fa1b31eadb9d6d9eb8ac474d9aa1604bd51b6f
-DIST ghostscript-gpl-9.04-patchset-4.tar.bz2 10850 RMD160 6e5b7bfd791c075bed15efa5255fbcf943d07837 SHA1 a0688d44141f5a3b174ebf4773f967c48919bbfe SHA256 7e0e89b7f87fc6b5f082a073115d36a7d5632ddbb91fa01d5beea15689800441
 DIST ghostscript-gpl-9.05-patchset-2.tar.bz2 5525 RMD160 4d0f5acb013a2acdb7bef1a67bc206a9cb2bf011 SHA1 0136b6025e26fe0a3a3d6b00cfe2887625c43b97 SHA256 1deadf8ed034353ffc14230b66cd438774bd6def03e6f93943f5200bbd01695b
 DIST gsdjvu-1.5.tar.gz 207583 RMD160 010be2cd791d5e2814c1f6554150bfd7c34222c0 SHA1 c7d0677dae5fe644cf3d714c04b3c2c343906342 SHA256 d4f01d605ff086835005e79d5fcead2def8aafafc106e170dc5f2dc618593ab4
 EBUILD ghostscript-gpl-9.04-r4.ebuild 7055 RMD160 eb4a6f1910c2da702221e7f1d3678550b20acb47 SHA1 54f27d90e507541a72851bc803f481d97e784a46 SHA256 a00f86d3837454f11e8ee62921c533b8370a7295a8ff3e859f5bcd3a16c3044c
-EBUILD ghostscript-gpl-9.04-r6.ebuild 7142 RMD160 a9472f65a332df041bf206e601195c0b3e5715b6 SHA1 bae7f48a1b89147ddb3e9970474f77f5477be110 SHA256 9a56b41a56c32328d878b0e659aaf2f9d6d5495283e0107d9ee9652997778d0a
-EBUILD ghostscript-gpl-9.05-r2.ebuild 7435 RMD160 2b2264f928cbe7010f83aed2027813127987dcc3 SHA1 dbaa6ab3433651f651f67d3c6daf959e66f16ee5 SHA256 82132d67d6beff1a2e46e8d2dd980c69d1091c0b0d7a55b76722b21ea4fd636e
-MISC ChangeLog 26507 RMD160 261bc52daf8437ac5786f20f6843a1b49f0fd4df SHA1 5c302767f67392f9b87097ddaf74664d7bb7e48d SHA256 f482d910e4957a1ed8e36144733ffedaffba81d334a05244713135b5fe193662
+EBUILD ghostscript-gpl-9.05-r2.ebuild 7501 RMD160 286481f570d36b77490ae388cab80e42e79cd67a SHA1 e5501b9d6434cad851b5eec630ab939486eff8ed SHA256 76018a2b08d2f5d8d00009d0d4f995cb2c81b827bcd1b500b052c3540153adac
+MISC ChangeLog 26902 RMD160 2dfd310acb9d712820624ae0f2e3b4ae23887eeb SHA1 3e92c9e7ed299f4784b772cdb403893cf0a7bd2c SHA256 f57a877065a75cfed30811c7025b8c4622989b0a5db544fdbc39a8461bd495ac
 MISC metadata.xml 281 RMD160 021f72140851af4f6b5fd892d1c5ab485ebce970 SHA1 4b5de22d7f9078ea8935cb5616c73540f8ef4aab SHA256 8f54c529127270fee6cdc9e4db328d9403ff2183d2ce21317932c17fd58ad0d0
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/AtggACgkQX3X2B8XHTonLkACeIFoNxuoaC3OK2AMDvfThmnbJ
-ptgAoIHUd4iFKDwHgBOG18v9q3rNX9oC
-=JMrX
+iEYEARECAAYFAk/CBmkACgkQX3X2B8XHTokw/wCbBj6tZbyHvNgrXznTw+I8Zi/u
+uO4An1dDTjERwK9M4U1ueiR6hlWD15MJ
+=Kxyd
 -----END PGP SIGNATURE-----
