@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ghostscript-gpl-9.05-r2.ebuild,v 1.1 2012/05/09 19:48:38 tgurr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-text/ghostscript-gpl/ghostscript-gpl-9.05-r2.ebuild,v 1.2 2012/05/18 20:51:44 dilfridge Exp $
 
 EAPI=3
 
@@ -20,7 +20,7 @@ SRC_URI="
 LICENSE="GPL-3 CPL-1.0"
 SLOT="0"
 KEYWORDS="~x64-freebsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~x64-solaris ~x86-solaris"
-IUSE="bindist cups dbus djvu gtk idn jpeg2k static-libs X"
+IUSE="bindist cups dbus djvu gtk idn jpeg2k linguas_de static-libs X"
 
 COMMON_DEPEND="
 	app-text/libpaper
@@ -246,4 +246,6 @@ src_install() {
 	dosym /usr/share/poppler/cMaps /usr/share/ghostscript/${PVM}/Resource/CMap
 
 	use static-libs || find "${ED}" -name '*.la' -delete
+
+	use linguas_de || rm -r "${ED}"/usr/share/man/de
 }
